Add API to fetch user details by ID
