# handler/response/register_user_v1_response.go
@@ -10,17 +10,14 @@ import (
 
 // swagger:model
 type RegisterUserV1Response struct {
-	Success bool   `json:"success"`
-	Error   string `json:"error"`
-	UserID  int64  `json:"user_id"`
-	Name    string `json:"name"`
+	Success bool  `json:"success"`
+	UserID  int64 `json:"user_id"`
 }
 
 func NewRegisterUserV1Response(_ context.Context, _ config.Config, user domain.User) (RegisterUserV1Response, http.Header) {
 	respBody := RegisterUserV1Response{
 		Success: true,
 		UserID:  user.UserID,
-		Name:    user.FirstName + " " + user.LastName,
 	}
 
 	return respBody, http.Header{}
